tests/scripts/type_errors/types_with_the_same_name.roto
record Foo { a: u32 }
record Foo { b: u32 }

fn foo() {}
